<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_payment_history"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/img_older_than_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recycler_payment_history"
                    android:layout_marginLeft="@dimen/margin_50"
                    android:src="@mipmap/ic_older_than_history" />

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recycler_payment_history"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_50"
                    android:layout_toRightOf="@+id/img_older_than_history"
                    android:text="@string/label_older_than_history"
                    android:textSize="@dimen/text_size_18" />

                <TextView
                    android:id="@+id/tv_sub_title"
                    style="@style/BodyTextRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_title"
                    android:layout_marginBottom="@dimen/margin_xlarge"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_50"
                    android:layout_marginTop="@dimen/padding_10"
                    android:layout_toRightOf="@+id/img_older_than_history"
                    android:text="@string/label_payment_history_subtitle"
                    android:textColor="@color/text_slate_grey"
                    android:textSize="@dimen/text_size_11" />


                <Button
                    android:id="@+id/button_history"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_sub_title"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:background="@drawable/button_grey_outline_bg"
                    android:text="@string/label_payment_history_load_more"
                    android:textColor="@color/text_body_black" />

            </RelativeLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>






